syntax = "proto3";

package game;

enum ProtoEventType {
  JoinGame = 0;
  PlayerJoined = 1;
  WeaponFireAction = 2;
  WaveStart = 3;
  SpawnEnemy = 4;
  EnemyDeath = 5;
  PlayerScoreUpdate = 6;
  PlayerSetWeapon = 7;
  WeaponPurchased = 8;
  PlayerStateEvent = 9;
}

// Базовые типы
message Point {
  float x = 1;
  float y = 2;
}

message Event {
  ProtoEventType eventType = 1;
}

message EventJoinGame {
  ProtoEventType eventType = 1;
  string playerId = 2;
}

message EventPlayerJoined {
  ProtoEventType eventType = 1;
  string playerId = 2;
  bool isHost = 3;
}

message EventWeaponFireAction {
  ProtoEventType eventType = 1;
  string playerId = 2; 
  string weaponId = 3;
  Point originPoint = 6;
  Point targetPoint = 7; 
  float angleTilt = 8;
}

message EventWaveStart {
  ProtoEventType eventType = 1;
  int32 number = 2;
  int32 duration = 3;
}

message EventPlayerState {
  ProtoEventType eventType = 1;
  string playerId = 2;
  Point position = 3;
}

message EventSpawnEnemy {
  ProtoEventType eventType = 1;
  string id = 2;
  string enemyType = 3;
  Point position = 4;
}

message EventEnemyDeath {
  ProtoEventType eventType = 1;
  string id = 2;
}

message EventPlayerSetWeapon {
  ProtoEventType eventType = 1;
  string playerId = 2;
  string weaponId = 3;
  string weaponType = 4;
}

message EventWeaponPurchased {
  ProtoEventType eventType = 1;
  string playerId = 2;
  string weaponType = 3;
  int32 price = 4;
}

message EventPlayerScoreUpdate {
  ProtoEventType eventType = 1;
  string playerId = 2;
  int32 score = 3;
}
